--- a/category.html
+++ b/category.html
@@ -7,8 +7,8 @@
     <title>分类</title>
     <link rel="stylesheet" href="./static/reset.css">
     <script src="./static/rem.js"></script>
-<link href="css/category.css" rel="stylesheet"></head>
+<link href="./css/category.css" rel="stylesheet"></head>
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="js/common.min.js"></script><script type="text/javascript" src="js/category.min.js"></script></body>
+<script type="text/javascript" src="./js/common.min.js"></script><script type="text/javascript" src="./js/category.min.js"></script></body>
 </html>
