--- a/detail.html
+++ b/detail.html
@@ -8,10 +8,10 @@
     <title>详情页</title>
     <link rel="stylesheet" href="./static/reset.css">
     <script src="./static/rem.js"></script>
-<link href="css/detail.css" rel="stylesheet"></head>
+<link href="./css/detail.css" rel="stylesheet"></head>
 
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="js/common.min.js"></script><script type="text/javascript" src="js/detail.min.js"></script></body>
+<script type="text/javascript" src="./js/common.min.js"></script><script type="text/javascript" src="./js/detail.min.js"></script></body>
 
 </html>
