--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="./static/reset.css">
     <script src="./static/rem.js"></script>
     <title>meituan</title>
-<link href="css/index.css" rel="stylesheet"></head>
+<link href="./css/index.css" rel="stylesheet"></head>
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="js/common.min.js"></script><script type="text/javascript" src="js/index.min.js"></script></body>
+<script type="text/javascript" src="./js/common.min.js"></script><script type="text/javascript" src="./js/index.min.js"></script></body>
 </html>
