--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./static/reset.css">
     <script src="./static/rem.js"></script>
-    <title>meituan</title>
+    <title>meituanweb</title>
 <link href="/meituan/css/index.css" rel="stylesheet"></head>
 <body>
     <div id="root"></div>
